replace generateBuildConfig by generateBuildConfigProvider. NOT TESTED

--- a/butterknife/build.gradle
+++ b/butterknife/build.gradle
@@ -25,7 +25,7 @@ android {
 
   // TODO replace with https://issuetracker.google.com/issues/72050365 once released.
   libraryVariants.all {
-    it.generateBuildConfig.enabled = false
+    it.generateBuildConfigProvider.configure { it.enabled = false }
   }
 }
 
