--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.jakewharton
-VERSION_NAME=10.0.1-SNAPSHOT
+VERSION_NAME=10.1.0
 
 POM_DESCRIPTION=Field and method binding for Android views.
 
