Prepare next development version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.jakewharton
-VERSION_NAME=10.2.2
+VERSION_NAME=10.2.3-SNAPSHOT
 
 POM_DESCRIPTION=Field and method binding for Android views.
 
